--- a/app/scss/base/_reset.scss
+++ b/app/scss/base/_reset.scss
@@ -27,3 +27,16 @@ body {
 a {
   color: $blue;
 }
+
+.px-20 {
+  padding: 0 20px;
+}
+
+.link {
+  display: block;
+  text-align: center;
+}
+
+.link-registro {
+  text-decoration: underline;
+}
