--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -1,5 +1,26 @@
 
-/* form val*/
+// custom height input, select
+.form-group {
+    margin-bottom: 2rem;
+}
+
+.form-control {
+    padding: 0.8rem 1rem;
+    line-height: 1.5;
+    border-radius: 8px;
+    height: 60px;
+    border-color: $gray-dark;
+    font-size: 16px;
+    color: $black-light;
+}
+
+.form-group {
+    select.form-control-lg.form-control {
+        height: 60px;
+    }
+}
+
+// form validation valid, invalid
 .form-group {
     position: relative;
 }
@@ -14,12 +35,12 @@
     right: 26px;
 }
 
-
 .form-control.is-valid {
     border-color: #19CE74;
     color: #19CE74;
 }
 
+// custom input check
 span.bigcheck-target {
     margin-right: 10px;
 }
@@ -46,29 +67,3 @@ input[type='checkbox'].bigcheck:checked + span.bigcheck-target:after {
     display: block;
 }
 
-.box-check {
-    background-color: #F9F9F9;
-    padding: 10px 20px 10px 6px;
-    border-radius: 8px;
-    margin-bottom: 20px;
-}
-
-.box-check label {
-    display: flex;
-    align-items: center;
-    margin: 0;
-    i {
-        font-size: 12px;
-        color: #5F6268;
-        font-style: normal;
-    }
-}
-
-.box-boleta-recapcha {
-    max-width: 350px;
-    margin: 30px auto;
-}
-
-.row-check {
-    margin-top: 20px;;
-}
