--- a/app/scss/main-mobil.scss
+++ b/app/scss/main-mobil.scss
@@ -17,12 +17,18 @@
 // Sections
 @import 'sections/header';
 
+//Pages
+@import 'pages/login';
+@import 'pages/recupera-contrasena';
+@import 'pages/registro-mobile';
+@import 'pages/registro-mobile-natural';
+
 body {
     background-position: top center;
     background-repeat: no-repeat;
-}
-.page-registro-usuario {
-   /*  background-image: url(../images/m-registro-mobile-natural.jpg); */
+    .page-registro-usuario {
+        /*  background-image: url(../images/m-registro-mobile-natural.jpg); */
+     }
 }
 
 .wrapper {
@@ -31,533 +37,4 @@ body {
     border:1px solid lightgray;
 }
 
-.content-page {
-    padding: 10px 20px;
-}
 
-.box-redes {
-    margin-top: 40px;
-}
-
-.layout-redes {
-    margin-bottom: 26px;
-}
-
-.box-redes-login  {
-    display: flex;
-    align-items: center;
-    margin-top: 19px;
-    a {
-        margin-right: 35px;
-    }
-}
-
-
-.box-cuenta {
-    margin-top: 22px;
-    p {
-        color:#5F6268;
-        text-align: center;
-    }
-}
-
-
-/* Page  Recupera tu clave -- 1*/
-
-.content-page-clave {
-    padding: 15px 0;
-}
-
-.formulario-login {
-    p {
-        margin-bottom: 24px;
-    }
-}
-
-.box-recapcha {
-    margin-top: 45px;
-}
-
-.texto-capcha {
-    text-align: center;
-    color: #5F6268;
-    margin-bottom: 14px;
-}
-
-.iframe-captcha {
-    transform:scale(0.8);
-    display: flex;
-    justify-content: center;
-    margin-bottom: 42px;
-}
-
-.box-btn {
-    padding: 0 20px;
-}
-
-.box-volver {
-    margin-top: 53px;
-}
-
-.link-bold {
-    font-weight: bold;
-    text-decoration: underline;
-    text-align: center;
-    display: block;
-}
-
-/* Page  Recupera tu clave -- 2 - Page Correo*/
-
-.content-page-clave-correo {
-    padding: 0 0 15px 0;
-}
-
-.box-icono-correo {
-    text-align: center;
-}
-
-.box-top-correo {
-    border-bottom: 1px dashed #979797;
-    padding-top: 10px;
-    padding-bottom: 15px;
-    p {
-        color: $black-light;
-        font-size: 15px;
-        line-height: 25px;
-        span {
-            color: $green;
-        }
-    }
-}
-
-.box-texto-correo {
-    border-bottom: 1px dashed #979797;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    p {
-        color: $gray-dark;
-        font-size: 14px;
-        line-height: 25px;
-        font-style: italic;
-    }
-}
-
-.title-correo {
-    color:$black-light;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 25px
-}
-
-.lista-realizar {
-    margin-top: 24px;
-    margin-bottom: 8px;
-    li {
-        list-style: none;
-        display: flex;
-        margin-bottom: 30px;
-        &:last-child {
-            margin-bottom: 0;
-        }
-        i {
-            color:$gray-dark;
-            border: 2px solid $gray-dark;
-            width: 30px;
-            height: 30px;
-            border-radius: 100px;
-            display: block;
-            margin-right: 46px;
-            text-align: center;
-        }
-        span {
-            color:$blue-dark;
-            font-size: 14px;
-            line-height: 22px;  
-        }
-        .box-circle {
-            width: 64px; 
-        }
-    }
-}
-
-.box-btn-correo {
-    margin-top: 30px;
-}
-
-/* Page  Recupera tu clave -- 3*/
-
-.form-eye {
-    label {
-        color: $black-light;
-        font-size: 16px;
-        line-height: 25px;
-    }
-    .form-control {
-        border-right: 0;
-        font-size: 16px;
-        color: $black-light;
-        &:focus {
-            outline: none;
-            box-shadow: none;
-            border-color: rgba(0, 0, 0, 0.15);
-        }
-    }
-    .input-group-addon {
-        padding: 0.5rem 1rem;
-        border: 1px solid rgba(0,0,0,.15);
-        border-left: 0;
-        border-top-right-radius: 8px;
-        border-bottom-right-radius: 8px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .fa-eye {
-        color:$blue;
-    }
-}
-
-.box-top-restablecer {
-    padding-top: 10px;
-    padding-bottom: 15px;
-    p {
-        color: $black-light;
-        font-size: 15px;
-        line-height: 25px;
-        font-weight: bold;
-        span {
-            color: $green;
-        }
-    }
-}
-
-/* Page  Recupera tu clave -- 5*/
-.content-page-correo-exito {
-    padding: 105px 0;
-}
-.box-icono-check {
-    text-align: center;
-    margin-top: 18px;
-}
-
-.texto-exitoso {
-    margin-top: 20px;
-    padding: 0 1rem;
-    p {
-        color: $blue-dark;
-        font-size: 21px;
-        line-height: 30px;
-        text-align: center;
-        font-weight: bold;
-    }
-}
-
-.breadcrumb {
-    background-color: transparent;
-    padding: 0.2rem 0.2rem;
-    margin-bottom: 0.2rem;
-    li {
-        color: $blue;
-        font-weight: 500;
-        font-size: 12px;
-        line-height: 22px;
-        font-weight: 600;
-        &.active {
-            color: $blue;
-            &:before {
-                color: $blue;
-            }
-        }
-    }
-}
-
-.step {
-    display: flex;
-    flex-wrap: nowrap;
-    width: 100%;
-    margin-bottom: 1rem;
-    .step-item {
-        flex: 1 1 0;  
-       /*  flex-grow: 1; */
-        position: relative;
-        text-align: center;
-        &:not(:first-child)::before {
-            background-color: #D9D9D6;
-            content: "";
-            height: 0.125rem;
-            left: -50%;
-            position: absolute;
-            top: 0.7375rem;
-            width: 100%;
-            z-index: 0;
-        } 
-        &:nth-child(2)::before {
-            width: 65%;
-            left: -32%;
-        } 
-        &:nth-child(3)::before {
-            width: 65%;
-            left: -32%;
-        } 
-        &.active {
-           a {
-               &::before {
-                background: #fff;
-                border: 3px solid $blue;
-               }
-               span {
-                   color:$blue;
-               }
-           }
-           p {
-               color:$blue;
-           }
-        }
-
-        p {
-            color: $black-light;
-            font-size: 14px;
-            margin-top: 12px;
-        }
-
-        .step-item-link {
-            color: #69707a;
-            position: relative;
-            display: inline-block;
-            padding-top: 1.25rem;
-            padding-left: 1rem;
-            padding-right: 1rem;
-            text-decoration: none;
-            z-index: 1;
-            span {
-                color:white;
-                position: absolute;
-                top: 4px;
-                z-index: 11;
-                left: 11px;
-                display: flex;
-                font-weight: bold;
-            }
-            &:before {
-                background-color: $gray;
-                border: 0.125rem solid #fff;
-                border-radius: 100%;
-                content: "";
-                display: block;
-                height: 2rem;
-                width: 2rem;
-                left: 50%;
-                position: absolute;
-                top: 0;
-                transform: translateX(-50%);
-                z-index: 1;
-            }
-        }
-      }
- }
-
-.dual-btn {
-    margin-top: 25px;
-    flex-direction: column;
-    a {
-        margin-bottom: 20px;
-    }
-}
-
-.content-page-form {
-    padding: 17px 20px;
-}
-
-.layout-formulario {
-    padding-bottom: 40px;
-}
-
-.form-group-all {
-    margin-top: 26px;
-}
-
-.row-texto-form {
-    margin-top: 60px;
-    p {
-        color: $black-light;
-        font-size: 14px;
-    }
-}
-
-/* registro mobile 2*/
-.alert-message {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    margin: 0 auto;
-    border:none;
-    border-radius: 8px;
-    i {
-       margin-bottom: 16px;
-    }
-}
-
-.alert-success {
-    background-color: #d2ffe9;
-    color:$blue;
-    margin-top: 25px;
-    padding: 2.6rem 1.4rem 2rem 1.4rem;
-}
-.alert-danger {
-    background-color: #C94747; 
-    color:white;
-    margin-top: 20px;
-    padding: 2rem 1.4rem 1rem 1.4rem;
-}
-
-.alert-heading {
-    font-weight: bold;
-    text-align: center;
-}
-
-.texto-mensaje {
-    p {
-        font-size: 14px;
-    }
-}
-
-/* registro mobile 3*/
-.box-preguntas {
-    margin: 60px auto 40px auto;
-    .item-pregunta {
-        margin-bottom: 35px;
-        a {
-            color:$blue;
-            display: block;
-        }
-        p {
-            color: $black-light;
-            span {
-                color:$blue;
-            }
-        }
-    }
-}
-
-.title-pregunta {
-    color:$blue-dark;
-    font-size: 16px;
-}
-
-.text-form {
-    color:$black-light;
-    font-size: 12px;
-}
-
-.lista-switch {
-    margin-top: 32px;
-    .item-switch {
-        margin-bottom: 18px;
-    }
-}
-
-.formulario-registro {
-    p {
-        color:$black-light;
-        font-size: 12px;
-    }
-}
-
-// page mobil natural
-
-.list-input {
-    margin-left: 15px;
-    margin-top: 7px;
-    margin: 7px 0 0 15px;
-    li {
-        color: $gray-dark;
-        font-size: 12px;
-    }
-}
-
-.input-group-busqueda{
-    padding: 0 30px;
-    margin-top: 10px;
-    .input-group-text {
-        background-color: transparent;
-        border: none;
-        border-color: white;
-    }
-     .input-busqueda {
-        border: none;
-        border-radius: 0;
-        color: $blue;
-        &::placeholder {
-            color: $blue;
-        }
-    }
-    .fa-search {
-        color: $blue;
-    }
-    .input-group-prepend {
-        background-color: white;
-    }
-}
-
-.box-check {
-    background-color: #F9F9F9;
-    padding: 10px 20px 10px 6px;
-    border-radius: 8px;
-    margin-bottom: 20px;
-}
-
-.box-check label {
-    display: flex;
-    align-items: center;
-    margin: 0;
-    i {
-        font-size: 12px;
-        color: #5F6268;
-        font-style: normal;
-    }
-}
-
-.row-tabla {
-    background-color: #E7F0FF;
-}
-
-.lista-tabla {
-    list-style: none;
-    padding: 26px 20px 10px 20px;
-    li {
-        color:$black-light;
-        font-size: 14px;
-        margin-bottom: 19px;
-    }
-}
-
-
-.box-persona-recapcha {
-    margin: 32px auto 42px auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-}
-
-.box-check {
-    background-color: #F9F9F9;
-    padding: 10px 20px 10px 6px;
-    border-radius: 8px;
-    margin-bottom: 20px;
-}
-
-.box-check label {
-    display: flex;
-    align-items: center;
-    margin: 0;
-    i {
-        font-size: 12px;
-        color: #5F6268;
-        font-style: normal;
-    }
-}
-
-.row-check {
-    margin-top: 20px;;
-}
