--- a/app/scss/base/_reset.scss
+++ b/app/scss/base/_reset.scss
@@ -41,6 +41,13 @@ a {
   text-align: center;
 }
 
+.link-home {
+  display: block;
+  text-align: center;
+  font-size: 14px;
+  text-decoration: underline;
+}
+
 .link-registro {
   text-decoration: underline;
 }
