se agrega section notificaciones

--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -102,3 +102,14 @@
         margin-right: 10px;
     }
 }
+
+
+.btn-azul-small {
+    background-color: $blue;
+    box-sizing: border-box;
+    border-radius: 8px;
+    font-size: 12px;
+    color: white;
+    font-weight: bold;
+    padding: 0.4rem;
+}
