--- a/app/css/main-mobil.css
+++ b/app/css/main-mobil.css
@@ -3334,6 +3334,17 @@ a {
   margin-right: 10px;
 }
 
+.btn-azul-small {
+  background-color: #2274FF;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 8px;
+  font-size: 12px;
+  color: white;
+  font-weight: bold;
+  padding: 0.4rem;
+}
+
 .form-group {
   margin-bottom: 2rem;
 }
@@ -4533,6 +4544,93 @@ body {
   background-position: top center;
   background-repeat: no-repeat;
   height: 780px;
+}
+
+.box-estado-clima {
+  display: none;
+  width: 98%;
+  position: absolute;
+  z-index: 12;
+  left: 1%;
+  top: 80px;
+  padding: 10px 0 0 0;
+  background: #FFFFFF;
+  border: 0.5px solid #BDBDBD;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+}
+.box-estado-clima.active {
+  display: block;
+}
+.box-estado-clima .title-estado {
+  color: #003287;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 30px;
+  margin-bottom: 15px;
+  padding: 0 23px;
+}
+
+.row-estado {
+  padding: 8px 36px 8px 23px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.row-estado:hover {
+  background: #E7F0FF;
+  border-radius: 5px;
+}
+.row-estado i {
+  margin-right: 19px;
+}
+.row-estado .texto-estado .subtitle-estado {
+  color: #5F6268;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 23px;
+}
+.row-estado .texto-estado p {
+  color: #5F6268;
+  font-size: 14px;
+  line-height: 16px;
+  margin-bottom: 13px;
+}
+
+.estado-porcentaje {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 75px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 auto;
+}
+.estado-porcentaje i {
+  color: #5F6268;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.row-botones {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 15px 25px;
+  border-top: 1px solid #BDBDBD;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .wrapper {
